# lab7

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  hasher.h  hashtable.h  list.h  main.cpp  optional_ref.h  tree.h  utility.h
ui/QEDLab7Ui/: CMakeLists.txt  dirty_wrapper.h  main.cpp  qed.cpp  qed.h  qed.ui  task1qed.cpp  task1qed.h  task1qed.ui  task2qed.cpp  task2qed.h  task2qed.ui  task3qed.cpp  task3qed.h  task3qed.ui
